packages/babylon/test/fixtures/cssx/errors/wrong-expression/actual.js
cssx(.test { margin-top: `[.map`; })